src/tests/routes/crates/versions/snapshots/crates_io__tests__routes__crates__versions__read__show_by_crate_name_and_semver_no_published_by.snap
---
source: src/tests/routes/crates/versions/read.rs
expression: json
---
{
  "version": {
    "audit_actions": [],
    "bin_names": null,
    "checksum": "                                                                ",
    "crate": "foo_vers_show_no_pb",
    "crate_size": 0,
    "created_at": "[datetime]",
    "description": null,
    "dl_path": "/api/v1/crates/foo_vers_show_no_pb/1.0.0/download",
    "documentation": null,
    "downloads": 0,
    "edition": null,
    "features": {},
    "has_lib": null,
    "homepage": null,
    "id": "[id]",
    "lib_links": null,
    "license": null,
    "links": {
      "authors": "/api/v1/crates/foo_vers_show_no_pb/1.0.0/authors",
      "dependencies": "/api/v1/crates/foo_vers_show_no_pb/1.0.0/dependencies",
      "version_downloads": "/api/v1/crates/foo_vers_show_no_pb/1.0.0/downloads"
    },
    "num": "1.0.0",
    "published_by": null,
    "readme_path": "/api/v1/crates/foo_vers_show_no_pb/1.0.0/readme",
    "repository": null,
    "rust_version": null,
    "trustpub_data": null,
    "updated_at": "[datetime]",
    "yank_message": null,
    "yanked": false
  }
}
